--- a/examples/computation-store/src/main/webapp/index.html
+++ b/examples/computation-store/src/main/webapp/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Computation Engine Example</title>
+    <script data-main="assets/js/main" src="assets/js/lib/require.js"></script>
 </head>
 <body>
+<table id="computations">
+
+</table>
 </body>
 </html>
